--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,20 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #194178;
+  height: 100%;
+  overflow: hidden;
+  font-family: 'Open Sans',
+  sans-serif;
+  font-weight: 300;
+  background-color: #132148;
   color: white;
+}
+
+#root {
+  height: 100%;
 }
 
 code {
